@@ -1,7 +1,7 @@
 class TasksController < ApplicationController
   before_filter :require_user
   before_filter :update_sidebar, :only => :index
-  before_filter "set_current_tab(:tasks)", :only => [ :index, :show ]
+  before_filter :set_current_tab, :only => [ :index, :show ]
 
   # GET /tasks
   # GET /tasks.xml
