@@ -1,28 +1,22 @@
 class ActivityObserver < ActiveRecord::Observer
   observe Account, Campaign, Comment, Contact, Lead, Opportunity, Task
 
-  def after_create(model)
-    # model.logger.p "after_create: " + model.inspect
-    create_activity(model, :created)
+  def after_create(subject)
+    stamp(subject, :created)
   end
 
-  def after_update(model)
-    # model.logger.p "after_update: " + model.inspect
-    create_activity(model, :updated)
+  def after_update(subject)
+    subject.logger.p "self: " + self.methods.sort.inspect
+    stamp(subject, :updated)
   end
 
-  def after_destroy(model)
-    # model.logger.p "after_destroy: " + model.inspect
-    create_activity(model, :deleted)
+  def after_destroy(subject)
+    stamp(subject, :deleted)
   end
 
   private
-  def create_activity(model, action)
-    Activity.create(
-      :user    => model.user,
-      :subject => model,
-      :action  => action.to_s,
-      :info    => model.respond_to?(:full_name) ? model.full_name : model.name
-    )
+  def stamp(subject, action)
+    current_user = Authentication.find.record
+    Activity.stamp(current_user, subject, action) if current_user
   end
 end
