@@ -24,13 +24,14 @@
 require File.expand_path(File.dirname(__FILE__) + '/../spec_helper')
 
 describe Opportunity do
+
   before(:each) do
-    @valid_attributes = {
-      :name => "Excellent Opportunity"
-    }
+    Authentication.stub!(:find).and_return(@authentication)
+    @authentication.stub!(:record).and_return(Factory(:user))
   end
 
   it "should create a new instance given valid attributes" do
-    Opportunity.create!(@valid_attributes)
+    Opportunity.create!(:name => "Opportunity")
   end
+
 end
