@@ -4,8 +4,13 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Fri, Apr 10, 2009
+---------------------------------------------------------------------
+- Added activity tracking for recently viewed items.
+
 Thu, Apr 9, 2009
 ---------------------------------------------------------------------
+- Fixed activity time-stamp format in Dashboard.
 
 Wed, Apr 8, 2009
 ---------------------------------------------------------------------
